--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ console.log("javascript");
     <nav
         class="flex flex-col item-center justify-between w-full text-center md:flex-row"
     >
-        <HeaderButton class="text-black" href="/astro-pag/src/pages/about.astro">
+        <HeaderButton class="text-black" href="/about.astro">
             <svg  
             slot="before" 
             width="24"  
@@ -37,7 +37,7 @@ console.log("javascript");
             
         </HeaderButton>
         
-        <HeaderButton class="text-black" href="#">
+        <HeaderButton class="text-black" href="/index.astro">
             <svg
             slot="before"
             width="24"
@@ -56,7 +56,7 @@ console.log("javascript");
             <path d="M12 17a5 5 0 0 0 5 -5" />
             </svg>Discografia
         </HeaderButton>
-        <HeaderButton class="text-black" href="#">
+        <HeaderButton class="text-black" href="..\blog\about.astro">
             <svg  
             slot="before"
             width="24"
