--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
-import Launches from '../components/Launches.astro';
+import Albums from '../components/Albums.astro';
 ---
 
-<Layout title="Idles">
-    <Launches />
+<Layout title="Discografia Idles">
+    <Albums />
 </Layout>
