--- a/src/components/Albums.astro
+++ b/src/components/Albums.astro
@@ -1,5 +1,5 @@
 ---
-import CardLaunch from "./CardLaunch.astro";
+import CardAlbum from "./CardAlbum.astro";
 import { getIdlesAlbums } from "../services/idlesband";
 
 const albums = await getIdlesAlbums()
@@ -7,8 +7,8 @@ const albums = await getIdlesAlbums()
 
 <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
 {
-  albums.map((album) => (
-    <CardLaunch
+  albums.map((album: { id: string; title: string; release_date: Date; cover: string; genre_id: number; tracklist: string; cover_small: string; cover_medium: string; cover_big: string; cover_xl: string; md5_image: string; explicit_lyrics: boolean; }) => (
+    <CardAlbum
       id={album.id}
       title={album.title}
       release_date={album.release_date}
