--- a/src/components/CardAlbum.astro
+++ b/src/components/CardAlbum.astro
@@ -31,8 +31,8 @@ const albumStatus = explicit_lyrics ? "Explicit lyrics" : "";
 ---
 
 <a
-  href={`/album/${title}`}
-  class="rounded-lg shadow-md hover:scale-105 hover:bg-[#eb7858] hover:border-gray-500 transition flex flex-col"
+  href={`/album/${id}`}
+  class="rounded-lg shadow-md hover:scale-105 hover:bg-[#eb7858] transition flex flex-col"
 >
   <picture class="flex justify-center p-4">
     <img
