--- a/src/components/HeaderButton.astro
+++ b/src/components/HeaderButton.astro
@@ -1,9 +1,10 @@
-<a href="/"
-    class="flex-row justify-center text-black cursor-pointer focus:ring-4 focus:outline-none font-medium rounded-lg px-5 py-2.5 text-center inline-flex items-center mr-2 mb-2 hover:shadow-lg transition-all duration-200 ease-in-out hover:scale-110 scale-90 gap-x-2 opacity-90 hover:opacity-100"
+<button
+  
+  class="flex-row justify-center text-black cursor-pointer focus:ring-4 focus:outline-none font-medium rounded-lg px-5 py-2.5 text-center inline-flex items-center mr-2 mb-2 hover:shadow-lg transition-all duration-200 ease-in-out hover:scale-110 scale-90 gap-x-2 opacity-90 hover:opacity-100"
 >
-    <slot name="before" />
+  <slot name="before" />
 
-    <slot />
+  <slot />
 
-    <slot name="after" />
-</a>
+  <slot name="after" />
+</button>
