--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
 	title: string;
@@ -14,9 +15,9 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body class="bg-[#eb7858] min-h-screen pb-32">
 		<Header />
@@ -30,7 +31,7 @@ const { title } = Astro.props;
 
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: #eb7858;
 		background-size: 224px;
 		color: black;
 	}
